--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sun Mar 22 2020 18:46:35 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Mar 24 2020 17:50:37 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5e7674ce1a5b6b2421a46dbf" data-wf-site="5e30eecf2c9656b33936eb65">
 <head>
   <meta charset="utf-8">
@@ -20,7 +20,7 @@
 </head>
 <body>
   <div class="utility-page-wrap">
-    <div class="utility-page-content w-form"><img src="https://d3e54v103j8qbb.cloudfront.net/static/page-not-found.211a85e40c.svg" alt="">
+    <div class="utility-page-content w-form"><img src="https://d3e54v103j8qbb.cloudfront.net/static/page-not-found.211a85e40c.svg" alt="page not found icon">
       <h2 class="_404">Page Not Found</h2>
       <div>The page you are looking for doesn&#x27;t exist or has been moved.</div>
     </div>
