--- a/regions/islands.html
+++ b/regions/islands.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sun Mar 22 2020 18:46:35 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Mar 24 2020 17:50:37 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5e7674ce1a5b6b67d3a46da3" data-wf-site="5e30eecf2c9656b33936eb65">
 <head>
   <meta charset="utf-8">
@@ -25,7 +25,7 @@
   <div class="hero">
     <div data-collapse="medium" data-animation="default" data-duration="400" data-doc-height="1" class="nav w-nav">
       <div class="nav-inner">
-        <div class="nav-logo-wrap"><a href="../index.html" class="brand w-nav-brand"><img src="../images/rsz_bcyc_logo.jpg" width="100" srcset="../images/rsz_bcyc_logo-p-500.jpeg 500w, ../images/rsz_bcyc_logo.jpg 608w" sizes="100px" alt="" class="image-6"></a></div>
+        <div class="nav-logo-wrap"><a href="../index.html" class="brand w-nav-brand"><img src="../images/rsz_bcyc_logo.jpg" width="100" srcset="../images/rsz_bcyc_logo-p-500.jpeg 500w, ../images/rsz_bcyc_logo.jpg 608w" sizes="100px" alt="BCYC logo" class="image-6"></a></div>
         <div class="nav-menu-wrap">
           <nav role="navigation" class="nav-menu-2 w-nav-menu"><a href="#about" class="nav-link w-nav-link">About</a><a href="../executives.html" class="nav-link w-nav-link">Executives</a>
             <div data-delay="0" data-hover="1" class="nav-dropdown w-dropdown">
@@ -34,7 +34,7 @@
                 <div class="text-block">Regions</div>
               </div>
               <nav class="dropdown-list w-dropdown-list"><a href="../regions/islands.html" aria-current="page" class="dropdown-link w-dropdown-link w--current">Islands</a><a href="../regions/lower-mainland.html" class="dropdown-link w-dropdown-link">Lower Mainland</a></nav>
-            </div><a href="#" class="nav-link w-nav-link">Contact Us</a></nav>
+            </div><a href="https://bcyouthcouncil.typeform.com/to/knkHje" target="_blank" class="nav-link w-nav-link">Contact Us</a></nav>
           <div class="menu-button w-nav-button">
             <div class="menu-icon w-icon-nav-menu"></div>
           </div>
@@ -68,7 +68,7 @@
     <div class="wrapper"></div>
   </div>
   <div class="footer">
-    <div class="wrap"><img src="../images/rsz_bcyc_logo.jpg" width="136" srcset="../images/rsz_bcyc_logo-p-500.jpeg 500w, ../images/rsz_bcyc_logo.jpg 608w" sizes="136px" alt="">
+    <div class="wrap"><img src="../images/rsz_android-chrome-512x512.jpg" width="136" alt="BCYC logo">
       <div class="footer-list"><a href="https://www.instagram.com/bcyouthcouncil/" target="_blank" class="footer-link">Instagram</a><a href="https://www.facebook.com/YouthCouncilBC/" target="_blank" class="footer-link">Facebook</a><a href="https://twitter.com/YouthCouncil_BC" target="_blank" class="footer-link">Twitter</a></div>
     </div>
   </div>
