--- a/executives.html
+++ b/executives.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Mar 24 2020 17:50:37 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Mar 24 2020 18:12:38 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5e7674ce1a5b6b0e47a46d81" data-wf-site="5e30eecf2c9656b33936eb65">
 <head>
   <meta charset="utf-8">
@@ -27,7 +27,7 @@
       <div class="nav-inner">
         <div class="nav-logo-wrap"><a href="index.html" class="brand w-nav-brand"><img src="images/rsz_bcyc_logo.jpg" width="100" srcset="images/rsz_bcyc_logo-p-500.jpeg 500w, images/rsz_bcyc_logo.jpg 608w" sizes="100px" alt="BCYC logo" class="image-6"></a></div>
         <div class="nav-menu-wrap">
-          <nav role="navigation" class="nav-menu-2 w-nav-menu"><a href="#" class="nav-link w-nav-link">About</a><a href="executives.html" aria-current="page" class="nav-link w-nav-link w--current">Executives</a>
+          <nav role="navigation" class="nav-menu-2 w-nav-menu"><a href="http://bcyouthcouncil.ca#about" class="nav-link w-nav-link">About</a><a href="executives.html" aria-current="page" class="nav-link w-nav-link w--current">Executives</a>
             <div data-delay="0" data-hover="1" class="nav-dropdown w-dropdown">
               <div class="w-dropdown-toggle">
                 <div class="icon w-icon-dropdown-toggle"></div>
