--- a/regions/islands.html
+++ b/regions/islands.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Mar 24 2020 17:50:37 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Mar 24 2020 18:12:38 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5e7674ce1a5b6b67d3a46da3" data-wf-site="5e30eecf2c9656b33936eb65">
 <head>
   <meta charset="utf-8">
@@ -27,7 +27,7 @@
       <div class="nav-inner">
         <div class="nav-logo-wrap"><a href="../index.html" class="brand w-nav-brand"><img src="../images/rsz_bcyc_logo.jpg" width="100" srcset="../images/rsz_bcyc_logo-p-500.jpeg 500w, ../images/rsz_bcyc_logo.jpg 608w" sizes="100px" alt="BCYC logo" class="image-6"></a></div>
         <div class="nav-menu-wrap">
-          <nav role="navigation" class="nav-menu-2 w-nav-menu"><a href="#about" class="nav-link w-nav-link">About</a><a href="../executives.html" class="nav-link w-nav-link">Executives</a>
+          <nav role="navigation" class="nav-menu-2 w-nav-menu"><a href="http://bcyouthcouncil.ca#about" class="nav-link w-nav-link">About</a><a href="../executives.html" class="nav-link w-nav-link">Executives</a>
             <div data-delay="0" data-hover="1" class="nav-dropdown w-dropdown">
               <div class="w-dropdown-toggle">
                 <div class="icon w-icon-dropdown-toggle"></div>
@@ -49,7 +49,7 @@
   </div>
   <div class="people-section-regions">
     <div class="w-layout-grid grid people">
-      <div id="w-node-eb976b4f64f9-d3a46da3" data-w-id="4e84781d-1e8e-2a90-3254-eb976b4f64f9" style="opacity:0" class="person-block-region"><img src="../images/ezgif.com-webp-to-jpg-1.jpg" alt="photo of Diego" class="image-5">
+      <div id="w-node-eb976b4f64f9-d3a46da3" data-w-id="4e84781d-1e8e-2a90-3254-eb976b4f64f9" style="opacity:0" class="person-block-region"><img src="../images/pasted-image-0-1.png" alt="photo of Diego" width="207" srcset="../images/pasted-image-0-1-p-500.png 500w, ../images/pasted-image-0-1-p-800.png 800w, ../images/pasted-image-0-1-p-1080.png 1080w, ../images/pasted-image-0-1.png 1432w" sizes="207px" class="image-5">
         <div class="person-name">Diego Christiansen-Barker</div>
         <div class="person-position">Chair of the Islands</div>
         <div class="person-blurb">Diego leads through a variety of roles. Spending most of his time doing activism work or paid work he doesn’t have much free time but when he does he enjoys a good strategy game or a long run.<br></div>
