--- a/executives.html
+++ b/executives.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Mar 24 2020 18:17:22 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Mar 24 2020 18:29:15 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5e7674ce1a5b6b0e47a46d81" data-wf-site="5e30eecf2c9656b33936eb65">
 <head>
   <meta charset="utf-8">
@@ -72,7 +72,7 @@
         <div class="person-position">Director of Human Resources, Head of Student Reps campaign</div>
         <div class="person-blurb">Ana Grace Rans Kolakovic is currently completing the International Baccalaureate program. She became involved with the BCYC after participating in the Summit program with Dogwood. She is currently working on the Student Reps BC campaign with many other passionate youth. You can always find Ana Grace reading a good book and listening to GD.</div>
       </div>
-      <div id="w-node-bf9155f9f14f-47a46d81" data-w-id="3fff79bb-d420-d66a-d3a1-bf9155f9f14f" style="opacity:0" class="person-block hiddenblock"><img src="images/icon-footer.png" alt="" class="image-5">
+      <div id="w-node-bf9155f9f14f-47a46d81" data-w-id="3fff79bb-d420-d66a-d3a1-bf9155f9f14f" style="opacity:0" class="person-block hiddenblock"><img src="images/rsz_bcyc_logo.jpg" srcset="images/rsz_bcyc_logo-p-500.jpeg 500w, images/rsz_bcyc_logo.jpg 608w" sizes="100vw" alt="BCYC logo" class="image-5">
         <div class="person-name">Empty</div>
         <div class="person-position">Director of Recruiting</div>
         <div class="person-blurb">Hello, my name is Aiden Mitchell, I like cats. This is a place for a blurb about the person</div>
