--- a/executives.html
+++ b/executives.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Mar 26 2020 22:03:43 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Mar 26 2020 22:16:58 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5e7674ce1a5b6b0e47a46d81" data-wf-site="5e30eecf2c9656b33936eb65">
 <head>
   <meta charset="utf-8">
@@ -40,7 +40,7 @@
                 <div class="icon w-icon-dropdown-toggle"></div>
                 <div class="text-block">Campaigns</div>
               </div>
-              <nav class="dropdown-list w-dropdown-list"><a href="campaigns/stduent-reps.html" class="dropdown-link w-dropdown-link">Student Reps</a></nav>
+              <nav class="dropdown-list w-dropdown-list"><a href="campaigns/student-reps.html" class="dropdown-link w-dropdown-link">Student Reps</a></nav>
             </div><a href="https://bcyouthcouncil.typeform.com/to/knkHje" target="_blank" class="nav-link w-nav-link">Contact Us</a></nav>
           <div class="menu-button w-nav-button">
             <div class="menu-icon w-icon-nav-menu"></div>
