--- a/campaigns/student-reps.html
+++ b/campaigns/student-reps.html
@@ -31,8 +31,7 @@ s.parentNode.insertBefore(t,s)}(window,document,'script',
 fbq('track', 'PageView');
 </script>
   <noscript>
- <img height="1" width="1" src="https://www.facebook.com/tr?id=154907775729568&ev=PageView
-&noscript=1">
+ <img height="1" width="1" src="https://www.facebook.com/tr?id=154907775729568&ev=PageView&noscript=1">
 </noscript>
   <!--  End Facebook Pixel Code  -->
 </head>
