--- a/regions/islands.html
+++ b/regions/islands.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Mar 26 2020 22:16:58 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Mar 27 2020 20:02:27 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5e7674ce1a5b6b67d3a46da3" data-wf-site="5e30eecf2c9656b33936eb65">
 <head>
   <meta charset="utf-8">
@@ -27,21 +27,21 @@
       <div class="nav-inner">
         <div class="nav-logo-wrap"><a href="../index.html" class="brand w-nav-brand"><img src="../images/rsz_bcyc_logo.jpg" width="100" srcset="../images/rsz_bcyc_logo-p-500.jpeg 500w, ../images/rsz_bcyc_logo.jpg 608w" sizes="100px" alt="BCYC logo" class="image-6"></a></div>
         <div class="nav-menu-wrap">
-          <nav role="navigation" class="nav-menu-2 w-nav-menu"><a href="https://bcyouthcouncil.ca#about" class="nav-link w-nav-link">About</a><a href="../executives.html" class="nav-link w-nav-link">Executives</a>
+          <nav role="navigation" class="nav-menu-2 w-nav-menu"><a href="https://bcyouthcouncil.ca#about" class="nav-link w-nav-link">About Us</a><a href="../executives.html" class="nav-link w-nav-link">Our Executives</a>
             <div data-delay="0" data-hover="1" class="nav-dropdown w-dropdown">
               <div class="w-dropdown-toggle">
                 <div class="icon w-icon-dropdown-toggle"></div>
-                <div class="text-block">Regions</div>
+                <div class="text-block">Regional Chapters</div>
               </div>
               <nav class="dropdown-list w-dropdown-list"><a href="../regions/islands.html" aria-current="page" class="dropdown-link w-dropdown-link w--current">Islands</a><a href="../regions/lower-mainland.html" class="dropdown-link w-dropdown-link">Lower Mainland</a></nav>
             </div>
             <div data-delay="0" data-hover="1" class="nav-dropdown w-dropdown">
               <div class="w-dropdown-toggle">
                 <div class="icon w-icon-dropdown-toggle"></div>
-                <div class="text-block">Campaigns</div>
+                <div class="text-block">Our Campaigns</div>
               </div>
-              <nav class="dropdown-list w-dropdown-list"><a href="../campaigns/student-reps.html" class="dropdown-link w-dropdown-link">Student Reps</a></nav>
-            </div><a href="https://bcyouthcouncil.typeform.com/to/knkHje" target="_blank" class="nav-link w-nav-link">Contact Us</a></nav>
+              <nav class="dropdown-list w-dropdown-list"><a href="../campaigns/student-reps.html" class="dropdown-link w-dropdown-link">Student Reps</a><a href="../campaigns/vote16.html" class="dropdown-link w-dropdown-link">#Vote16BC</a></nav>
+            </div><a href="../donate.html" target="_blank" class="nav-link w-nav-link">Donate</a><a href="https://bcyouthcouncil.typeform.com/to/knkHje" target="_blank" class="nav-link w-nav-link">Contact Us</a></nav>
           <div class="menu-button w-nav-button">
             <div class="menu-icon w-icon-nav-menu"></div>
           </div>
@@ -49,7 +49,7 @@
       </div>
     </div>
   </div>
-  <div data-w-id="4e969de5-dbb7-4e4a-e205-2edd565b379b" class="section-regions center-regions">
+  <div class="section-regions center-regions">
     <div data-w-id="6b220cb1-4b9c-7fb0-75b9-53ff4a6c35a2" style="-webkit-transform:translate3d(0, 30PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 30PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 30PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 30PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="hero-content-region">
       <h1 class="heading-3-regions">Islands Region</h1>
     </div>
