--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Mar 27 2020 20:02:27 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Apr 16 2020 01:10:53 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5e7674ce1a5b6b3630a46d5d" data-wf-site="5e30eecf2c9656b33936eb65">
 <head>
   <meta charset="utf-8">
@@ -22,6 +22,12 @@
   <link href="images/webclip.jpg" rel="apple-touch-icon">
 </head>
 <body class="body">
+  <div style="-webkit-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="notification-bar">
+    <div class="notification-bar-container">
+      <div class="message">Due to an influx of applications, our application form is currently closed. If you are interested in joining the council, <a href="https://bcyouthcouncil.typeform.com/to/knkHje" target="_blank" class="link">contact us</a>.</div>
+    </div>
+    <div data-w-id="05255e43-81b1-1859-791f-d62e489a430e" class="close-notification">×</div>
+  </div>
   <div class="hero">
     <div data-collapse="medium" data-animation="default" data-duration="400" data-doc-height="1" class="nav w-nav">
       <div class="nav-inner">
@@ -50,9 +56,9 @@
     </div>
   </div>
   <div class="section center">
-    <div data-w-id="6b220cb1-4b9c-7fb0-75b9-53ff4a6c35a2" style="-webkit-transform:translate3d(0, 30PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 30PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 30PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 30PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="hero-content-home">
+    <div data-w-id="6b220cb1-4b9c-7fb0-75b9-53ff4a6c35a2" class="hero-content-home">
       <h1 class="heading-3">BC Youth Council</h1>
-      <h3 class="hero-subhead">Empowering youth through politics.</h3><a href="https://bcyouthcouncil.typeform.com/to/QDhcNp" target="_blank" class="button w-button">Apply</a><a href="donate.html" class="buttondonate w-button">Donate (coming soon)</a><a href="https://bcyouthcouncil.typeform.com/to/knkHje" target="_blank" class="signupbutton w-button">Sign up for our email list</a></div>
+      <h3 class="hero-subhead">Empowering youth through politics.</h3><a href="https://bcyouthcouncil.typeform.com/to/knkHje" class="button w-button">Apply</a><a href="donate.html" class="buttondonate w-button">Donate (coming soon)</a><a href="https://bcyouthcouncil.typeform.com/to/knkHje" target="_blank" class="signupbutton w-button">Sign up for our email list</a></div>
   </div>
   <div id="about" class="section wide img">
     <div data-w-id="b126983d-9126-fc06-c81d-1318685e2add" style="-webkit-transform:translate3d(0, 40PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 40PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 40PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 40PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="wrap">
