--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Apr 16 2020 01:10:53 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Apr 17 2020 01:11:10 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5e7674ce1a5b6b3630a46d5d" data-wf-site="5e30eecf2c9656b33936eb65">
 <head>
   <meta charset="utf-8">
@@ -58,7 +58,7 @@
   <div class="section center">
     <div data-w-id="6b220cb1-4b9c-7fb0-75b9-53ff4a6c35a2" class="hero-content-home">
       <h1 class="heading-3">BC Youth Council</h1>
-      <h3 class="hero-subhead">Empowering youth through politics.</h3><a href="https://bcyouthcouncil.typeform.com/to/knkHje" class="button w-button">Apply</a><a href="donate.html" class="buttondonate w-button">Donate (coming soon)</a><a href="https://bcyouthcouncil.typeform.com/to/knkHje" target="_blank" class="signupbutton w-button">Sign up for our email list</a></div>
+      <h3 class="hero-subhead">Empower, project, create.</h3><a href="https://bcyouthcouncil.typeform.com/to/knkHje" class="button w-button">Apply</a><a href="donate.html" class="buttondonate w-button">Donate (coming soon)</a><a href="https://bcyouthcouncil.typeform.com/to/knkHje" target="_blank" class="signupbutton w-button">Sign up for our email list</a></div>
   </div>
   <div id="about" class="section wide img">
     <div data-w-id="b126983d-9126-fc06-c81d-1318685e2add" style="-webkit-transform:translate3d(0, 40PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 40PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 40PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 40PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="wrap">
