--- a/campaigns/student-reps.html
+++ b/campaigns/student-reps.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sat May 02 2020 19:17:23 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu May 07 2020 00:23:36 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5e7cf1144bdb4c8f2b19a2ee" data-wf-site="5e30eecf2c9656b33936eb65">
 <head>
   <meta charset="utf-8">
@@ -38,7 +38,7 @@ fbq('track', 'PageView');
 </head>
 <body class="body">
   <div class="hero">
-    <div data-collapse="medium" data-animation="default" data-duration="400" data-doc-height="1" class="nav w-nav">
+    <div data-collapse="medium" data-animation="default" data-duration="400" data-doc-height="1" role="banner" class="nav w-nav">
       <div class="nav-inner">
         <div class="nav-logo-wrap"><a href="../index.html" class="brand w-nav-brand"><img src="../images/rsz_bcyc_logo.jpg" width="100" srcset="../images/rsz_bcyc_logo-p-500.jpeg 500w, ../images/rsz_bcyc_logo.jpg 608w" sizes="100px" alt="BCYC logo" class="image-6"></a></div>
         <div class="nav-menu-wrap">
@@ -48,7 +48,7 @@ fbq('track', 'PageView');
                 <div class="icon w-icon-dropdown-toggle"></div>
                 <div class="text-block">Regional Chapters</div>
               </div>
-              <nav class="dropdown-list w-dropdown-list"><a href="../regions/islands.html" class="dropdown-link w-dropdown-link">Islands</a><a href="../regions/lower-mainland.html" class="dropdown-link w-dropdown-link">Lower Mainland</a></nav>
+              <nav class="dropdown-list w-dropdown-list"><a href="../regions/islands.html" class="dropdown-link w-dropdown-link">Islands</a><a href="../regions/lower-mainland.html" class="dropdown-link w-dropdown-link">Lower Mainland</a><a href="../regions/southern-interior.html" class="dropdown-link w-dropdown-link">Southern Interior</a></nav>
             </div>
             <div data-delay="0" data-hover="1" class="nav-dropdown w-dropdown">
               <div class="w-dropdown-toggle">
@@ -70,6 +70,15 @@ fbq('track', 'PageView');
     </div>
   </div>
   <div class="section-2"><a href="https://bcyouthcouncil.typeform.com/to/O7lJOm" target="_blank" class="button w-button">Volunteer for this campaign</a><a href="https://bcyouthcouncil.typeform.com/to/frve5N" target="_blank" class="button-campaign w-button">Take our survey</a></div>
+  <div class="people-section-regions-one">
+    <div class="w-layout-grid grid people-one">
+      <div id="w-node-ae0caa542ede-2b19a2ee" data-w-id="ff622edc-2265-d0e2-2ce2-ae0caa542ede" style="opacity:0" class="person-block-region-one"><img src="../images/rsz_img_0014.jpg" alt="photo of Bodhi Mah" width="190" class="image-5">
+        <div class="person-name">Ana Grace Rans Kolakovic</div>
+        <div class="person-position">Coordinator of Student Reps</div>
+        <div class="person-blurb">Ana Grace Rans Kolakovic is currently completing the International Baccalaureate program. She became involved with the BCYC after participating in the Summit program with Dogwood. She is currently working on the Student Reps BC campaign with many other passionate youth. You can always find Ana Grace reading a good book and listening to GD.<br></div>
+      </div>
+    </div>
+  </div>
   <div id="about" class="section wide img">
     <div data-w-id="b126983d-9126-fc06-c81d-1318685e2add" class="wrap">
       <h2 class="heading-4"><strong class="bold-text">Student trustees are elected officials that actively advocate for student voice. Student trustees are elected by the students within the school board to ensure proper communication of student issues and opinions. They are active participants in board meetings and may offer suggestions or motions (dependent on school board). The student reps campaign goal is to bring official student voice into the education system, at the district level. We are aiming to have a student rep in each school district within 2 years.</strong></h2>
