--- a/campaigns/vote16.html
+++ b/campaigns/vote16.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sat May 02 2020 19:17:23 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu May 07 2020 00:23:36 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5e7e59b1957e0a2619243616" data-wf-site="5e30eecf2c9656b33936eb65">
 <head>
   <meta charset="utf-8">
@@ -38,7 +38,7 @@ fbq('track', 'PageView');
 </head>
 <body class="body">
   <div class="hero">
-    <div data-collapse="medium" data-animation="default" data-duration="400" data-doc-height="1" class="nav w-nav">
+    <div data-collapse="medium" data-animation="default" data-duration="400" data-doc-height="1" role="banner" class="nav w-nav">
       <div class="nav-inner">
         <div class="nav-logo-wrap"><a href="../index.html" class="brand w-nav-brand"><img src="../images/rsz_bcyc_logo.jpg" width="100" srcset="../images/rsz_bcyc_logo-p-500.jpeg 500w, ../images/rsz_bcyc_logo.jpg 608w" sizes="100px" alt="BCYC logo" class="image-6"></a></div>
         <div class="nav-menu-wrap">
@@ -48,7 +48,7 @@ fbq('track', 'PageView');
                 <div class="icon w-icon-dropdown-toggle"></div>
                 <div class="text-block">Regional Chapters</div>
               </div>
-              <nav class="dropdown-list w-dropdown-list"><a href="../regions/islands.html" class="dropdown-link w-dropdown-link">Islands</a><a href="../regions/lower-mainland.html" class="dropdown-link w-dropdown-link">Lower Mainland</a></nav>
+              <nav class="dropdown-list w-dropdown-list"><a href="../regions/islands.html" class="dropdown-link w-dropdown-link">Islands</a><a href="../regions/lower-mainland.html" class="dropdown-link w-dropdown-link">Lower Mainland</a><a href="../regions/southern-interior.html" class="dropdown-link w-dropdown-link">Southern Interior</a></nav>
             </div>
             <div data-delay="0" data-hover="1" class="nav-dropdown w-dropdown">
               <div class="w-dropdown-toggle">
@@ -72,7 +72,7 @@ fbq('track', 'PageView');
   <div class="section-2"><a href="https://dogwoodbc.ca/petitions/vote-16-bc/" target="_blank" class="button w-button">Sign the Petition</a></div>
   <div id="about" class="section wide img">
     <div data-w-id="b126983d-9126-fc06-c81d-1318685e2add" class="wrap">
-      <h2 class="heading-4"><strong class="bold-text">Youth are more active with politics then ever before. That&#x27;s why the #Vote16BC campaign is attempting to lower the voting age province wide to 16 years old. <br></strong></h2>
+      <h2 class="heading-4"><strong class="bold-text">Youth are more active with politics than ever before. That&#x27;s why the #Vote16BC campaign is attempting to lower the voting age province wide to 16 years old. <br></strong></h2>
     </div>
     <div class="wrapper"></div>
   </div>
