--- a/regions/islands.html
+++ b/regions/islands.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sat May 02 2020 19:17:23 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu May 07 2020 00:23:36 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5e7674ce1a5b6b67d3a46da3" data-wf-site="5e30eecf2c9656b33936eb65">
 <head>
   <meta charset="utf-8">
@@ -26,7 +26,7 @@
 </head>
 <body class="body">
   <div class="hero">
-    <div data-collapse="medium" data-animation="default" data-duration="400" data-doc-height="1" class="nav w-nav">
+    <div data-collapse="medium" data-animation="default" data-duration="400" data-doc-height="1" role="banner" class="nav w-nav">
       <div class="nav-inner">
         <div class="nav-logo-wrap"><a href="../index.html" class="brand w-nav-brand"><img src="../images/rsz_bcyc_logo.jpg" width="100" srcset="../images/rsz_bcyc_logo-p-500.jpeg 500w, ../images/rsz_bcyc_logo.jpg 608w" sizes="100px" alt="BCYC logo" class="image-6"></a></div>
         <div class="nav-menu-wrap">
@@ -36,7 +36,7 @@
                 <div class="icon w-icon-dropdown-toggle"></div>
                 <div class="text-block">Regional Chapters</div>
               </div>
-              <nav class="dropdown-list w-dropdown-list"><a href="../regions/islands.html" aria-current="page" class="dropdown-link w-dropdown-link w--current">Islands</a><a href="../regions/lower-mainland.html" class="dropdown-link w-dropdown-link">Lower Mainland</a></nav>
+              <nav class="dropdown-list w-dropdown-list"><a href="../regions/islands.html" aria-current="page" class="dropdown-link w-dropdown-link w--current">Islands</a><a href="../regions/lower-mainland.html" class="dropdown-link w-dropdown-link">Lower Mainland</a><a href="../regions/southern-interior.html" class="dropdown-link w-dropdown-link">Southern Interior</a></nav>
             </div>
             <div data-delay="0" data-hover="1" class="nav-dropdown w-dropdown">
               <div class="w-dropdown-toggle">
@@ -57,17 +57,11 @@
       <h1 class="heading-3-regions">Islands Region</h1>
     </div>
   </div>
-  <div class="people-section-regions">
-    <div class="w-layout-grid grid people">
-      <div id="w-node-eb976b4f64f9-d3a46da3" data-w-id="4e84781d-1e8e-2a90-3254-eb976b4f64f9" style="opacity:0" class="person-block-region"><img src="../images/pasted-image-0-1.png" alt="photo of Diego" width="207" srcset="../images/pasted-image-0-1-p-500.png 500w, ../images/pasted-image-0-1-p-800.png 800w, ../images/pasted-image-0-1-p-1080.png 1080w, ../images/pasted-image-0-1.png 1432w" sizes="207px" class="image-5">
-        <div class="person-name">Diego Christiansen-Barker</div>
+  <div class="people-section-regions-one">
+    <div class="w-layout-grid grid people-one">
+      <div id="w-node-7260e3ddc7e8-d3a46da3" data-w-id="5e4699e7-d5b6-bed8-d4e7-7260e3ddc7e8" style="opacity:0" class="person-block-region-one"><img src="../images/1.jpg" alt="photo of Taya Lee" width="186" srcset="../images/1.jpg 500w, ../images/1.jpg 641w" sizes="186px" class="image-5">
+        <div class="person-name">Taya Lee</div>
         <div class="person-position">Chair of the Islands</div>
-        <div class="person-blurb">Diego leads through a variety of roles. Spending most of his time doing activism work or paid work he doesn’t have much free time but when he does he enjoys a good strategy game or a long run.<br></div>
-      </div>
-      <div id="w-node-eb976b4f6501-d3a46da3" data-w-id="4e84781d-1e8e-2a90-3254-eb976b4f6501" style="opacity:0" class="person-block-region"><img src="../images/IMG_0683.jpeg" alt="photo of Aiden" width="150" srcset="../images/IMG_0683-p-500.jpeg 500w, ../images/IMG_0683-p-800.jpeg 800w, ../images/IMG_0683-p-1080.jpeg 1080w, ../images/IMG_0683-p-1600.jpeg 1600w, ../images/IMG_0683-p-2000.jpeg 2000w, ../images/IMG_0683-p-2600.jpeg 2600w, ../images/IMG_0683.jpeg 3024w" sizes="150px" class="image-5">
-        <div class="person-name">Aiden Mitchell</div>
-        <div class="person-position">Vice-Chair of the Islands</div>
-        <div class="person-blurb">Aiden is from Campbell River and he runs his own business doing tech support &amp; web design. He designed this website.</div>
       </div>
     </div>
   </div>
