--- a/regions/southern-interior.html
+++ b/regions/southern-interior.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
 <!--  Last Published: Thu May 07 2020 00:23:36 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="5e7674ce1a5b6b186ca46db4" data-wf-site="5e30eecf2c9656b33936eb65">
+<html data-wf-page="5eaef30db8d39c411d7635af" data-wf-site="5e30eecf2c9656b33936eb65">
 <head>
   <meta charset="utf-8">
-  <title>Lower Mainland - BC Youth Council</title>
+  <title>Southern Interior</title>
   <meta content="Empowering youth through politics." name="description">
-  <meta content="Lower Mainland - BC Youth Council" property="og:title">
+  <meta content="Southern Interior" property="og:title">
   <meta content="Empowering youth through politics." property="og:description">
-  <meta content="Lower Mainland - BC Youth Council" property="twitter:title">
+  <meta content="Southern Interior" property="twitter:title">
   <meta content="Empowering youth through politics." property="twitter:description">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
@@ -36,7 +36,7 @@
                 <div class="icon w-icon-dropdown-toggle"></div>
                 <div class="text-block">Regional Chapters</div>
               </div>
-              <nav class="dropdown-list w-dropdown-list"><a href="../regions/islands.html" class="dropdown-link w-dropdown-link">Islands</a><a href="../regions/lower-mainland.html" aria-current="page" class="dropdown-link w-dropdown-link w--current">Lower Mainland</a><a href="../regions/southern-interior.html" class="dropdown-link w-dropdown-link">Southern Interior</a></nav>
+              <nav class="dropdown-list w-dropdown-list"><a href="../regions/islands.html" class="dropdown-link w-dropdown-link">Islands</a><a href="../regions/lower-mainland.html" class="dropdown-link w-dropdown-link">Lower Mainland</a><a href="../regions/southern-interior.html" aria-current="page" class="dropdown-link w-dropdown-link w--current">Southern Interior</a></nav>
             </div>
             <div data-delay="0" data-hover="1" class="nav-dropdown w-dropdown">
               <div class="w-dropdown-toggle">
@@ -54,15 +54,14 @@
   </div>
   <div class="section-regions center-regions">
     <div data-w-id="6b220cb1-4b9c-7fb0-75b9-53ff4a6c35a2" style="-webkit-transform:translate3d(0, 30PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 30PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 30PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 30PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="hero-content-region">
-      <h1 class="heading-3-regions">Lower Mainland Region</h1>
+      <h1 class="heading-3-regions">Southern Interior Region</h1>
     </div>
   </div>
   <div class="people-section-regions-one">
     <div class="w-layout-grid grid people-one">
-      <div id="w-node-e34b7cfd1f8f-6ca46db4" data-w-id="aa75bba4-fef1-e6c4-cadf-e34b7cfd1f8f" style="opacity:0" class="person-block-region-one"><img src="../images/bodhimahprofessionalportrait.jpg" alt="photo of Bodhi Mah" width="186" srcset="../images/bodhimahprofessionalportrait-p-500.jpeg 500w, ../images/bodhimahprofessionalportrait-p-800.jpeg 800w, ../images/bodhimahprofessionalportrait-p-1080.jpeg 1080w, ../images/bodhimahprofessionalportrait.jpg 2115w" sizes="186px" class="image-5">
-        <div class="person-name">Bodhi Mah</div>
-        <div class="person-position">Chair of the Lower Mainland</div>
-        <div class="person-blurb">Bodhi is very excited to serve as the Chair of the Lower Mainland for the BCYC. Bodhi grew up in the Greater Vancouver area and is currently enrolled in his high school&#x27;s French immersion program. Outside of school, Bodhi pursuits his love of aviation by being a part of the Royal Canadian Air Cadet program. Bodhi is passionate about politics, music, and science. In his spare time, Bodhi enjoys playing piano, volunteering with his local politicians, and doing Model UNs.<br></div>
+      <div id="w-node-e34b7cfd1f8f-1d7635af" data-w-id="aa75bba4-fef1-e6c4-cadf-e34b7cfd1f8f" style="opacity:0" class="person-block-region-one"><img src="../images/IMG_20191104_183337_675.jpg" alt="photo of Simon Larocque" width="186" class="image-5">
+        <div class="person-name">Simon Larocque</div>
+        <div class="person-position">Chair of the Southern Interior</div>
       </div>
     </div>
   </div>
