--- a/regions/islands.html
+++ b/regions/islands.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu May 07 2020 00:23:36 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu May 07 2020 00:37:46 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5e7674ce1a5b6b67d3a46da3" data-wf-site="5e30eecf2c9656b33936eb65">
 <head>
   <meta charset="utf-8">
@@ -59,7 +59,7 @@
   </div>
   <div class="people-section-regions-one">
     <div class="w-layout-grid grid people-one">
-      <div id="w-node-7260e3ddc7e8-d3a46da3" data-w-id="5e4699e7-d5b6-bed8-d4e7-7260e3ddc7e8" style="opacity:0" class="person-block-region-one"><img src="../images/1.jpg" alt="photo of Taya Lee" width="186" srcset="../images/1.jpg 500w, ../images/1.jpg 641w" sizes="186px" class="image-5">
+      <div id="w-node-7260e3ddc7e8-d3a46da3" data-w-id="5e4699e7-d5b6-bed8-d4e7-7260e3ddc7e8" style="opacity:0" class="person-block-region-one"><img src="../images/1.jpg" alt="photo of Taya Lee" width="186" srcset="../images/1-p-500.jpeg 500w, ../images/1.jpg 641w" sizes="186px" class="image-5">
         <div class="person-name">Taya Lee</div>
         <div class="person-position">Chair of the Islands</div>
       </div>
