--- a/executives.html
+++ b/executives.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu May 07 2020 00:23:36 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu May 07 2020 00:37:46 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5e7674ce1a5b6b0e47a46d81" data-wf-site="5e30eecf2c9656b33936eb65">
 <head>
   <meta charset="utf-8">
@@ -82,7 +82,7 @@
         <div class="person-name">Eva Yueng</div>
         <div class="person-position">Director of Human Resources</div>
       </div>
-      <div id="w-node-bf9155f9f14f-47a46d81" data-w-id="3fff79bb-d420-d66a-d3a1-bf9155f9f14f" style="opacity:0" class="person-block hiddenblock"><img src="images/image1.jpeg" width="195" alt="" class="image-5">
+      <div id="w-node-bf9155f9f14f-47a46d81" data-w-id="3fff79bb-d420-d66a-d3a1-bf9155f9f14f" style="opacity:0" class="person-block hiddenblock"><img src="images/image1.jpeg" width="195" alt="Photo of Ishan Bhandal" class="image-5">
         <div class="person-name">Ishan Bhandal</div>
         <div class="person-position">Director of Operations</div>
       </div>
