--- a/regions/southern-interior.html
+++ b/regions/southern-interior.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu May 07 2020 00:23:36 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Jun 01 2020 19:19:06 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5eaef30db8d39c411d7635af" data-wf-site="5e30eecf2c9656b33936eb65">
 <head>
   <meta charset="utf-8">
@@ -44,7 +44,7 @@
                 <div class="text-block">Our Campaigns</div>
               </div>
               <nav class="dropdown-list w-dropdown-list"><a href="../campaigns/student-reps.html" class="dropdown-link w-dropdown-link">Student Reps</a><a href="../campaigns/vote16.html" class="dropdown-link w-dropdown-link">#Vote16BC</a></nav>
-            </div><a href="../donate.html" target="_blank" class="nav-link w-nav-link">Donate</a><a href="https://bcyouthcouncil.typeform.com/to/knkHje" target="_blank" class="nav-link w-nav-link">Contact Us</a></nav>
+            </div><a href="../donate.html" target="_blank" class="nav-link w-nav-link">Donate</a><a href="https://blog.bcyouthcouncil.ca" target="_blank" class="nav-link w-nav-link">Blog</a><a href="https://bcyouthcouncil.typeform.com/to/knkHje" target="_blank" class="nav-link w-nav-link">Contact Us</a></nav>
           <div class="menu-button w-nav-button">
             <div class="menu-icon w-icon-nav-menu"></div>
           </div>
