--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Jun 01 2020 19:19:06 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Jun 01 2020 19:24:14 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5e7674ce1a5b6b3630a46d5d" data-wf-site="5e30eecf2c9656b33936eb65">
 <head>
   <meta charset="utf-8">
@@ -27,7 +27,7 @@
 <body class="body">
   <div style="-webkit-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="notification-bar">
     <div class="notification-bar-container">
-      <div class="message">We are currently accepting applications for Vancouver Island &amp; the Southern Interior. Apply <a href="#" target="_blank" class="link-2">here.</a></div>
+      <div class="message">We are currently accepting applications for Vancouver Island &amp; the Southern Interior. Apply <a href="https://bcyouthcouncil.typeform.com/to/QDhcNp" target="_blank" class="link-2">here.</a></div>
     </div>
     <div data-w-id="05255e43-81b1-1859-791f-d62e489a430e" class="close-notification">×</div>
   </div>
@@ -61,7 +61,7 @@
   <div class="section center">
     <div data-w-id="6b220cb1-4b9c-7fb0-75b9-53ff4a6c35a2" class="hero-content-home">
       <h1 class="heading-3">BC Youth Council</h1>
-      <h3 class="hero-subhead">Empower. Project. Create.</h3><a href="donate.html" class="buttondonate w-button">Donate (coming soon)</a><a href="http://eepurl.com/g5ASgn" target="_blank" class="signupbutton w-button">Sign up for our email list</a></div>
+      <h3 class="hero-subhead">Empower. Project. Create.</h3><a href="donate.html" class="buttondonate w-button">Donate (coming soon)</a><a href="https://eepurl.com/g5ASgn" target="_blank" class="signupbutton w-button">Sign up for our email list</a></div>
   </div>
   <div id="about" class="section wide img">
     <div data-w-id="b126983d-9126-fc06-c81d-1318685e2add" style="-webkit-transform:translate3d(0, 40PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 40PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 40PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 40PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="wrap">
