--- a/campaigns/student-reps.html
+++ b/campaigns/student-reps.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Jun 01 2020 19:19:06 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Jun 03 2020 00:00:05 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5e7cf1144bdb4c8f2b19a2ee" data-wf-site="5e30eecf2c9656b33936eb65">
 <head>
   <meta charset="utf-8">
@@ -81,7 +81,7 @@ fbq('track', 'PageView');
   </div>
   <div id="about" class="section wide img">
     <div data-w-id="b126983d-9126-fc06-c81d-1318685e2add" class="wrap">
-      <h2 class="heading-4"><strong class="bold-text">Student trustees are elected officials that actively advocate for student voice. Student trustees are elected by the students within the school board to ensure proper communication of student issues and opinions. They are active participants in board meetings and may offer suggestions or motions (dependent on school board). The student reps campaign goal is to bring official student voice into the education system, at the district level. We are aiming to have a student rep in each school district within 2 years.</strong></h2>
+      <h2 class="heading-4"><strong class="bold-text">Student trustees are elected officials that actively advocate for student voice. Student trustees are elected by the students within the school board to ensure proper communication of student issues and opinions. They are active participants in board meetings and may offer suggestions or motions (dependent on school board). The student reps campaign goal is to bring official student voice into the education system, at the district level. We are aiming to have a student representative in each school district within 2 years.</strong></h2>
     </div>
     <div class="wrapper"></div>
   </div>
