--- a/press.html
+++ b/press.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
 <!--  Last Published: Fri Jun 12 2020 19:30:34 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="5ed82f329f6d91d134bc67a6" data-wf-site="5e30eecf2c9656b33936eb65">
+<html data-wf-page="5ee3c3965baa430ac99dd1e1" data-wf-site="5e30eecf2c9656b33936eb65">
 <head>
   <meta charset="utf-8">
-  <title>Home - BC Youth Council</title>
+  <title>Press</title>
   <meta content="Empowering youth through politics." name="description">
-  <meta content="Home - BC Youth Council" property="og:title">
+  <meta content="Press" property="og:title">
   <meta content="Empowering youth through politics." property="og:description">
-  <meta content="Home - BC Youth Council" property="twitter:title">
+  <meta content="Press" property="twitter:title">
   <meta content="Empowering youth through politics." property="twitter:description">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
@@ -25,16 +25,10 @@
   <link href="images/webclip.jpg" rel="apple-touch-icon">
 </head>
 <body class="body">
-  <div style="-webkit-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="notification-bar">
-    <div class="notification-bar-container">
-      <div class="message"><a href="press.html" class="link-3">Read our statement on the Black Lives Matter movement.</a></div>
-    </div>
-    <div data-w-id="05255e43-81b1-1859-791f-d62e489a430e" class="close-notification">×</div>
-  </div>
   <div class="hero">
     <div data-collapse="medium" data-animation="default" data-duration="400" data-doc-height="1" role="banner" class="nav w-nav">
       <div class="nav-inner">
-        <div class="nav-logo-wrap"><a href="index.html" aria-current="page" class="brand w-nav-brand w--current"><img src="images/BCYC-Logo-Full.png" width="204" srcset="images/BCYC-Logo-Full-p-500.png 500w, images/BCYC-Logo-Full-p-800.png 800w, images/BCYC-Logo-Full.png 1001w" sizes="204px" alt="" class="image-6"></a></div>
+        <div class="nav-logo-wrap"><a href="index.html" class="brand w-nav-brand"><img src="images/BCYC-Logo-Full.png" width="204" srcset="images/BCYC-Logo-Full-p-500.png 500w, images/BCYC-Logo-Full-p-800.png 800w, images/BCYC-Logo-Full.png 1001w" sizes="204px" alt="" class="image-6"></a></div>
         <div class="nav-menu-wrap">
           <nav role="navigation" class="nav-menu-2 w-nav-menu"><a href="https://bcyouthcouncil.ca#about" class="nav-link w-nav-link">About Us</a><a href="executives.html" class="nav-link w-nav-link">Our Executives</a>
             <div data-delay="0" data-hover="1" class="nav-dropdown w-dropdown">
@@ -58,21 +52,19 @@
       </div>
     </div>
   </div>
-  <div class="section center">
-    <div data-w-id="6b220cb1-4b9c-7fb0-75b9-53ff4a6c35a2" class="hero-content-home">
-      <h1 class="heading-3">BC Youth Council</h1>
-      <h3 class="hero-subhead">Empower. Project. Create.</h3><a href="donate.html" class="buttondonate w-button">Donate (coming soon)</a><a href="https://eepurl.com/g5ASgn" target="_blank" class="signupbutton w-button">Sign up for our email list</a></div>
-  </div>
-  <div id="about" class="section wide img">
-    <div data-w-id="b126983d-9126-fc06-c81d-1318685e2add" style="-webkit-transform:translate3d(0, 40PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 40PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 40PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 40PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="wrap">
-      <div class="title">about us</div>
-      <h2 class="heading-4"><strong class="bold-text">The BC Youth Council is a network of youth aged 14-24 from across British Columbia that provides a platform for change across the province. This change is achieved through working closely with politicians and community organizations, sharing voices with other youth, and making differences both provincially and locally.</strong></h2>
+  <div class="section-structure center-structure">
+    <div data-w-id="6b220cb1-4b9c-7fb0-75b9-53ff4a6c35a2" class="hero-content">
+      <h1 class="heading-3-structure">Press Releases</h1>
     </div>
-    <div class="wrapper"></div>
+  </div>
+  <div class="w-layout-grid pressgrid">
+    <div id="w-node-5696a71da7ab-c99dd1e1" data-w-id="151a7b28-a87e-57d5-62cc-5696a71da7ab" class="press-block">
+      <div class="presstext"><a href="documents/BCYC-Black-Lives-Matter-statement.pdf" target="_blank">June 4th 2020 - Statement on the Black Lives Matter movement</a></div>
+    </div>
   </div>
   <div class="footer">
     <div class="wrap"><img src="images/BCYC-Logo-Full.png" width="297" alt="Logo" srcset="images/BCYC-Logo-Full-p-500.png 500w, images/BCYC-Logo-Full-p-800.png 800w, images/BCYC-Logo-Full.png 1001w" sizes="(max-width: 479px) 90vw, 297px" class="image-7">
-      <div class="footer-list"><a href="press.html" target="_blank" class="footer-link">Press</a><a href="https://www.instagram.com/bcyouthcouncil/" target="_blank" class="footer-link">Instagram</a><a href="https://www.facebook.com/YouthCouncilBC/" target="_blank" class="footer-link">Facebook</a><a href="https://twitter.com/BCYouthCouncil" target="_blank" class="footer-link">Twitter</a></div>
+      <div class="footer-list"><a href="press.html" target="_blank" aria-current="page" class="footer-link w--current">Press</a><a href="https://www.instagram.com/bcyouthcouncil/" target="_blank" class="footer-link">Instagram</a><a href="https://www.facebook.com/YouthCouncilBC/" target="_blank" class="footer-link">Facebook</a><a href="https://twitter.com/BCYouthCouncil" target="_blank" class="footer-link">Twitter</a></div>
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js?site=5e30eecf2c9656b33936eb65" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
