--- a/regions/lower-mainland.html
+++ b/regions/lower-mainland.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Jun 01 2020 19:19:06 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="5e7674ce1a5b6b186ca46db4" data-wf-site="5e30eecf2c9656b33936eb65">
+<!--  Last Published: Fri Jun 12 2020 19:30:34 GMT+0000 (Coordinated Universal Time)  -->
+<html data-wf-page="5ed82f329f6d915e3fbc67b1" data-wf-site="5e30eecf2c9656b33936eb65">
 <head>
   <meta charset="utf-8">
   <title>Lower Mainland - BC Youth Council</title>
@@ -28,7 +28,7 @@
   <div class="hero">
     <div data-collapse="medium" data-animation="default" data-duration="400" data-doc-height="1" role="banner" class="nav w-nav">
       <div class="nav-inner">
-        <div class="nav-logo-wrap"><a href="../index.html" class="brand w-nav-brand"><img src="../images/rsz_bcyc_logo.jpg" width="100" srcset="../images/rsz_bcyc_logo-p-500.jpeg 500w, ../images/rsz_bcyc_logo.jpg 608w" sizes="100px" alt="BCYC logo" class="image-6"></a></div>
+        <div class="nav-logo-wrap"><a href="../index.html" class="brand w-nav-brand"><img src="../images/BCYC-Logo-Full.png" width="204" srcset="../images/BCYC-Logo-Full-p-500.png 500w, ../images/BCYC-Logo-Full-p-800.png 800w, ../images/BCYC-Logo-Full.png 1001w" sizes="204px" alt="" class="image-6"></a></div>
         <div class="nav-menu-wrap">
           <nav role="navigation" class="nav-menu-2 w-nav-menu"><a href="https://bcyouthcouncil.ca#about" class="nav-link w-nav-link">About Us</a><a href="../executives.html" class="nav-link w-nav-link">Our Executives</a>
             <div data-delay="0" data-hover="1" class="nav-dropdown w-dropdown">
@@ -39,7 +39,7 @@
               <nav class="dropdown-list w-dropdown-list"><a href="../regions/islands.html" class="dropdown-link w-dropdown-link">Islands</a><a href="../regions/lower-mainland.html" aria-current="page" class="dropdown-link w-dropdown-link w--current">Lower Mainland</a><a href="../regions/southern-interior.html" class="dropdown-link w-dropdown-link">Southern Interior</a></nav>
             </div>
             <div data-delay="0" data-hover="1" class="nav-dropdown w-dropdown">
-              <div class="w-dropdown-toggle">
+              <div class="dropdown-toggle w-dropdown-toggle">
                 <div class="icon w-icon-dropdown-toggle"></div>
                 <div class="text-block">Our Campaigns</div>
               </div>
@@ -57,9 +57,9 @@
       <h1 class="heading-3-regions">Lower Mainland Region</h1>
     </div>
   </div>
-  <div class="people-section-regions-one">
+  <div class="lower-mainland-people">
     <div class="w-layout-grid grid people-one">
-      <div id="w-node-e34b7cfd1f8f-6ca46db4" data-w-id="aa75bba4-fef1-e6c4-cadf-e34b7cfd1f8f" style="opacity:0" class="person-block-region-one"><img src="../images/bodhimahprofessionalportrait.jpg" alt="photo of Bodhi Mah" width="186" srcset="../images/bodhimahprofessionalportrait-p-500.jpeg 500w, ../images/bodhimahprofessionalportrait-p-800.jpeg 800w, ../images/bodhimahprofessionalportrait-p-1080.jpeg 1080w, ../images/bodhimahprofessionalportrait.jpg 2115w" sizes="186px" class="image-5">
+      <div id="w-node-e34b7cfd1f8f-3fbc67b1" data-w-id="aa75bba4-fef1-e6c4-cadf-e34b7cfd1f8f" style="opacity:0"><img src="../images/bodhimahprofessionalportrait.jpg" alt="photo of Bodhi Mah" width="186" srcset="../images/bodhimahprofessionalportrait-p-500.jpeg 500w, ../images/bodhimahprofessionalportrait-p-800.jpeg 800w, ../images/bodhimahprofessionalportrait-p-1080.jpeg 1080w, ../images/bodhimahprofessionalportrait.jpg 2115w" sizes="186px" class="image-5">
         <div class="person-name">Bodhi Mah</div>
         <div class="person-position">Chair of the Lower Mainland</div>
         <div class="person-blurb">Bodhi is very excited to serve as the Chair of the Lower Mainland for the BCYC. Bodhi grew up in the Greater Vancouver area and is currently enrolled in his high school&#x27;s French immersion program. Outside of school, Bodhi pursuits his love of aviation by being a part of the Royal Canadian Air Cadet program. Bodhi is passionate about politics, music, and science. In his spare time, Bodhi enjoys playing piano, volunteering with his local politicians, and doing Model UNs.<br></div>
@@ -73,8 +73,8 @@
     <div class="wrapper"></div>
   </div>
   <div class="footer">
-    <div class="wrap"><img src="../images/rsz_android-chrome-512x512.jpg" width="136" alt="BCYC logo">
-      <div class="footer-list"><a href="https://www.instagram.com/bcyouthcouncil/" target="_blank" class="footer-link">Instagram</a><a href="https://www.facebook.com/YouthCouncilBC/" target="_blank" class="footer-link">Facebook</a><a href="https://twitter.com/YouthCouncil_BC" target="_blank" class="footer-link">Twitter</a></div>
+    <div class="wrap"><img src="../images/BCYC-Logo-Full.png" width="297" alt="Logo" srcset="../images/BCYC-Logo-Full-p-500.png 500w, ../images/BCYC-Logo-Full-p-800.png 800w, ../images/BCYC-Logo-Full.png 1001w" sizes="(max-width: 479px) 90vw, 297px" class="image-7">
+      <div class="footer-list"><a href="../press.html" target="_blank" class="footer-link">Press</a><a href="https://www.instagram.com/bcyouthcouncil/" target="_blank" class="footer-link">Instagram</a><a href="https://www.facebook.com/YouthCouncilBC/" target="_blank" class="footer-link">Facebook</a><a href="https://twitter.com/BCYouthCouncil" target="_blank" class="footer-link">Twitter</a></div>
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js?site=5e30eecf2c9656b33936eb65" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
