--- a/executives.html
+++ b/executives.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Jun 01 2020 19:19:06 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="5e7674ce1a5b6b0e47a46d81" data-wf-site="5e30eecf2c9656b33936eb65">
+<!--  Last Published: Fri Jun 12 2020 19:30:34 GMT+0000 (Coordinated Universal Time)  -->
+<html data-wf-page="5ed82f329f6d918192bc67ae" data-wf-site="5e30eecf2c9656b33936eb65">
 <head>
   <meta charset="utf-8">
   <title>Executives - BC Youth Council</title>
@@ -28,7 +28,7 @@
   <div class="hero">
     <div data-collapse="medium" data-animation="default" data-duration="400" data-doc-height="1" role="banner" class="nav w-nav">
       <div class="nav-inner">
-        <div class="nav-logo-wrap"><a href="index.html" class="brand w-nav-brand"><img src="images/rsz_bcyc_logo.jpg" width="100" srcset="images/rsz_bcyc_logo-p-500.jpeg 500w, images/rsz_bcyc_logo.jpg 608w" sizes="100px" alt="BCYC logo" class="image-6"></a></div>
+        <div class="nav-logo-wrap"><a href="index.html" class="brand w-nav-brand"><img src="images/BCYC-Logo-Full.png" width="204" srcset="images/BCYC-Logo-Full-p-500.png 500w, images/BCYC-Logo-Full-p-800.png 800w, images/BCYC-Logo-Full.png 1001w" sizes="204px" alt="" class="image-6"></a></div>
         <div class="nav-menu-wrap">
           <nav role="navigation" class="nav-menu-2 w-nav-menu"><a href="https://bcyouthcouncil.ca#about" class="nav-link w-nav-link">About Us</a><a href="executives.html" aria-current="page" class="nav-link w-nav-link w--current">Our Executives</a>
             <div data-delay="0" data-hover="1" class="nav-dropdown w-dropdown">
@@ -39,7 +39,7 @@
               <nav class="dropdown-list w-dropdown-list"><a href="regions/islands.html" class="dropdown-link w-dropdown-link">Islands</a><a href="regions/lower-mainland.html" class="dropdown-link w-dropdown-link">Lower Mainland</a><a href="regions/southern-interior.html" class="dropdown-link w-dropdown-link">Southern Interior</a></nav>
             </div>
             <div data-delay="0" data-hover="1" class="nav-dropdown w-dropdown">
-              <div class="w-dropdown-toggle">
+              <div class="dropdown-toggle w-dropdown-toggle">
                 <div class="icon w-icon-dropdown-toggle"></div>
                 <div class="text-block">Our Campaigns</div>
               </div>
@@ -58,39 +58,46 @@
     </div>
   </div>
   <div class="people-section">
-    <div class="w-layout-grid grid">
-      <div id="w-node-5696a71da7ab-47a46d81" data-w-id="151a7b28-a87e-57d5-62cc-5696a71da7ab" style="opacity:0" class="person-block"><img src="images/pasted-image-0-1.png" width="195" alt="photo of Diego Christiansen-Barker" srcset="images/pasted-image-0-1-p-500.png 500w, images/pasted-image-0-1-p-800.png 800w, images/pasted-image-0-1-p-1080.png 1080w, images/pasted-image-0-1.png 1432w" sizes="195px" class="image-5">
+    <div class="w-layout-grid mobilegrid">
+      <div id="w-node-5696a71da7ab-92bc67ae" data-w-id="151a7b28-a87e-57d5-62cc-5696a71da7ab" style="opacity:0" class="person-block"><img src="images/pasted-image-0-1.png" width="195" alt="photo of Diego Christiansen-Barker" srcset="images/pasted-image-0-1-p-500.png 500w, images/pasted-image-0-1-p-800.png 800w, images/pasted-image-0-1-p-1080.png 1080w, images/pasted-image-0-1.png 1432w" sizes="195px" class="image-5">
         <div class="person-name">Diego Christiansen-Barker</div>
         <div class="person-position">Chair</div>
         <div class="person-blurb">Diego leads through his role as Chair of BCYC. Spending most of his time doing activism work or paid work, he doesn’t have much free time but when he does he enjoys a good strategy game or a long run.<br></div>
       </div>
-      <div id="w-node-c0b377545e38-47a46d81" data-w-id="5fa6ac9b-4373-980f-10d5-c0b377545e38" style="opacity:0" class="person-block"><img src="images/ezgif.com-webp-to-jpg.jpg" alt="photo of Fallon O&#x27;Neill" width="195" class="image-5">
+      <div id="w-node-6867bc8ad7d4-92bc67ae" data-w-id="9fa45c33-83e5-9056-bb24-6867bc8ad7d4" style="opacity:0" class="person-block hiddenblock"><img src="images/ezgif.com-webp-to-jpg-2.jpg" width="195" alt="Photo of Ishan Bhandal" class="image-5">
+        <div class="person-name">Kat Seow</div>
+        <div class="person-position">Secretary</div>
+        <div class="person-blurb">Kat is passionate about getting youth’s voices and opinions heard, especially in terms of climate change policy. As Secretary, she helps the organization run smoothly, working with all campaigns to help share and organize information. She lives in West Vancouver and is going to UBC for Applied Biology in the fall. Kat helped run her schools Environment Club, Hiking Club and Mandarin club, amongst others. Kat loves being outside, learning about native plants and swimming in the ocean!</div>
+      </div>
+      <div id="w-node-c0b377545e38-92bc67ae" data-w-id="5fa6ac9b-4373-980f-10d5-c0b377545e38" style="opacity:0" class="person-block"><img src="images/ezgif.com-webp-to-jpg.jpg" alt="photo of Fallon O&#x27;Neill" width="195" class="image-5">
         <div class="person-name">Fallon O&#x27;Neill</div>
         <div class="person-position">Founder</div>
-        <div class="person-blurb">Fallon founded the BC Youth Council with her best friend when she was 14 years old. Currently, Fallon is a 17 year old student attending Rockridge Secondary School, West Vancouver, who enjoys theatre, journalism, and eating sushi with her friends.</div>
+        <div class="person-blurb">Fallon O’Neill started the BC Youth Council in 2017 at the age of 14. She is from West Vancouver and attended Rockridge Secondary School, where she was heavily involved in theatre and journalism. She is currently studying Law at Oxford University.</div>
       </div>
-      <div id="w-node-7822547a73a9-47a46d81" data-w-id="1f0f450f-c37f-ff9c-4e20-7822547a73a9" style="opacity:0" class="person-block"><img src="images/IMG_0683.JPG" width="195" alt="Photo of Aiden Mitchell" srcset="images/IMG_0683-p-500.jpeg 500w, images/IMG_0683-p-800.jpeg 800w, images/IMG_0683-p-1080.jpeg 1080w, images/IMG_0683.JPG 3024w" sizes="195px" class="image-5">
+      <div id="w-node-7822547a73a9-92bc67ae" data-w-id="1f0f450f-c37f-ff9c-4e20-7822547a73a9" style="opacity:0" class="person-block"><img src="images/IMG_0683.JPG" width="195" alt="Photo of Aiden Mitchell" srcset="images/IMG_0683-p-500.jpeg 500w, images/IMG_0683-p-800.jpeg 800w, images/IMG_0683-p-1080.jpeg 1080w, images/IMG_0683.JPG 3024w" sizes="195px" class="image-5">
         <div class="person-name">Aiden Mitchell</div>
         <div class="person-position">Director of Information Technology</div>
-        <div class="person-blurb">Aiden is from Campbell River and he runs his own business doing tech support &amp; web design. He designed this website.</div>
+        <div class="person-blurb">Aiden is the Director of Information Technology for BCYC. His passion has always been in technology since a young age. Aiden is currently enrolled in Grade 10 French Immersion at Carihi in Campbell River and he owns and operates his own tech support business. Aiden joined the BCYC to maintain and further their technology department.</div>
       </div>
-      <div id="w-node-025736557e54-47a46d81" data-w-id="9ddc4710-2034-f085-be88-025736557e54" style="opacity:0" class="person-block"><img src="images/21944145-684A-47D8-9668-56BD35285D17-54009-00001CCE3B51E745-min.jpg" alt="Photo of Matthew Tran" width="195" srcset="images/21944145-684A-47D8-9668-56BD35285D17-54009-00001CCE3B51E745-min-p-500.jpeg 500w, images/21944145-684A-47D8-9668-56BD35285D17-54009-00001CCE3B51E745-min-p-800.jpeg 800w, images/21944145-684A-47D8-9668-56BD35285D17-54009-00001CCE3B51E745-min-p-1080.jpeg 1080w, images/21944145-684A-47D8-9668-56BD35285D17-54009-00001CCE3B51E745-min.jpg 1241w" sizes="195px" class="image-5">
+      <div id="w-node-025736557e54-92bc67ae" data-w-id="9ddc4710-2034-f085-be88-025736557e54" style="opacity:0" class="person-block"><img src="images/BD884FC5-F339-4F05-94F8-E5527A617C70-3891-00000154AD56C4C2.png" alt="Photo of Matthew Tran" width="195" srcset="images/BD884FC5-F339-4F05-94F8-E5527A617C70-3891-00000154AD56C4C2.png 500w, images/BD884FC5-F339-4F05-94F8-E5527A617C70-3891-00000154AD56C4C2.png 800w, images/BD884FC5-F339-4F05-94F8-E5527A617C70-3891-00000154AD56C4C2.png 1080w, images/BD884FC5-F339-4F05-94F8-E5527A617C70-3891-00000154AD56C4C2.png 1242w" sizes="195px" class="image-5">
         <div class="person-name">Matthew Tran</div>
         <div class="person-position">Director of Communications </div>
+        <div class="person-blurb">Matthew joined BCYC to help develop a place where youth can have a bigger voice in our province. As the Director of Communications, he focuses on our marketing and relations with other organizations. He lives in Surrey and is currently in Grade 11. He is enrolled in his high school&#x27;s leadership, music, volleyball and French immersion program. Matthew enjoys travelling, being a Big Brother mentor, and going to Canucks games.</div>
       </div>
-      <div id="w-node-c5fa2bf0a1fc-47a46d81" data-w-id="349e0798-0bf3-99b9-ce6c-c5fa2bf0a1fc" style="opacity:0" class="person-block"><img src="images/IMG_0803.JPG" width="195" alt="Photo of Eva Hueng" srcset="images/IMG_0803-p-500.jpeg 500w, images/IMG_0803-p-800.jpeg 800w, images/IMG_0803-p-1080.jpeg 1080w, images/IMG_0803-p-1600.jpeg 1600w, images/IMG_0803.JPG 1932w" sizes="195px" class="image-5">
+      <div id="w-node-c5fa2bf0a1fc-92bc67ae" data-w-id="349e0798-0bf3-99b9-ce6c-c5fa2bf0a1fc" style="opacity:0" class="person-block"><img src="images/IMG_0803.JPG" width="195" alt="Photo of Eva Hueng" srcset="images/IMG_0803-p-500.jpeg 500w, images/IMG_0803-p-800.jpeg 800w, images/IMG_0803-p-1080.jpeg 1080w, images/IMG_0803-p-1600.jpeg 1600w, images/IMG_0803.JPG 1932w" sizes="195px" class="image-5">
         <div class="person-name">Eva Yueng</div>
         <div class="person-position">Director of Human Resources</div>
+        <div class="person-blurb">Eva wants to help expand her skills and to develop more youth representation across BC. As the Director of Human Resources, she focuses on recruiting, training and managing the overall well being of BCYC members. She lives in Vancouver and is currently in Grade 10. She is enrolled in the venture program, participates in various sports and on two other youth councils. Eva  enjoys volunteering her time with kids programs, trying new food and going to the beach.</div>
       </div>
-      <div id="w-node-bf9155f9f14f-47a46d81" data-w-id="3fff79bb-d420-d66a-d3a1-bf9155f9f14f" style="opacity:0" class="person-block hiddenblock"><img src="images/image1.jpeg" width="195" alt="Photo of Ishan Bhandal" class="image-5">
+      <div id="w-node-bf9155f9f14f-92bc67ae" data-w-id="3fff79bb-d420-d66a-d3a1-bf9155f9f14f" style="opacity:0" class="person-block hiddenblock"><img src="images/image1.jpeg" width="195" alt="Photo of Ishan Bhandal" class="image-5">
         <div class="person-name">Ishan Bhandal</div>
         <div class="person-position">Director of Operations</div>
       </div>
     </div>
   </div>
   <div class="footer">
-    <div class="wrap"><img src="images/rsz_android-chrome-512x512.jpg" width="136" alt="BCYC logo">
-      <div class="footer-list"><a href="https://www.instagram.com/bcyouthcouncil/" target="_blank" class="footer-link">Instagram</a><a href="https://www.facebook.com/YouthCouncilBC/" target="_blank" class="footer-link">Facebook</a><a href="https://twitter.com/YouthCouncil_BC" target="_blank" class="footer-link">Twitter</a></div>
+    <div class="wrap"><img src="images/BCYC-Logo-Full.png" width="297" alt="Logo" srcset="images/BCYC-Logo-Full-p-500.png 500w, images/BCYC-Logo-Full-p-800.png 800w, images/BCYC-Logo-Full.png 1001w" sizes="(max-width: 479px) 90vw, 297px" class="image-7">
+      <div class="footer-list"><a href="press.html" target="_blank" class="footer-link">Press</a><a href="https://www.instagram.com/bcyouthcouncil/" target="_blank" class="footer-link">Instagram</a><a href="https://www.facebook.com/YouthCouncilBC/" target="_blank" class="footer-link">Facebook</a><a href="https://twitter.com/BCYouthCouncil" target="_blank" class="footer-link">Twitter</a></div>
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js?site=5e30eecf2c9656b33936eb65" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
