Adding alt text to new logo

--- a/press.html
+++ b/press.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Jun 12 2020 19:30:34 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Jun 12 2020 19:38:41 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ee3c3965baa430ac99dd1e1" data-wf-site="5e30eecf2c9656b33936eb65">
 <head>
   <meta charset="utf-8">
@@ -28,7 +28,7 @@
   <div class="hero">
     <div data-collapse="medium" data-animation="default" data-duration="400" data-doc-height="1" role="banner" class="nav w-nav">
       <div class="nav-inner">
-        <div class="nav-logo-wrap"><a href="index.html" class="brand w-nav-brand"><img src="images/BCYC-Logo-Full.png" width="204" srcset="images/BCYC-Logo-Full-p-500.png 500w, images/BCYC-Logo-Full-p-800.png 800w, images/BCYC-Logo-Full.png 1001w" sizes="204px" alt="" class="image-6"></a></div>
+        <div class="nav-logo-wrap"><a href="index.html" class="brand w-nav-brand"><img src="images/BCYC-Logo-Full.png" width="204" srcset="images/BCYC-Logo-Full-p-500.png 500w, images/BCYC-Logo-Full-p-800.png 800w, images/BCYC-Logo-Full.png 1001w" sizes="204px" alt="Our logo" class="image-6"></a></div>
         <div class="nav-menu-wrap">
           <nav role="navigation" class="nav-menu-2 w-nav-menu"><a href="https://bcyouthcouncil.ca#about" class="nav-link w-nav-link">About Us</a><a href="executives.html" class="nav-link w-nav-link">Our Executives</a>
             <div data-delay="0" data-hover="1" class="nav-dropdown w-dropdown">
