Fixing Nav hover & adding new campaign Nav links

--- a/executives.html
+++ b/executives.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Jun 12 2020 19:38:41 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Jun 12 2020 19:47:36 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ed82f329f6d918192bc67ae" data-wf-site="5e30eecf2c9656b33936eb65">
 <head>
   <meta charset="utf-8">
@@ -43,7 +43,7 @@
                 <div class="icon w-icon-dropdown-toggle"></div>
                 <div class="text-block">Our Campaigns</div>
               </div>
-              <nav class="dropdown-list w-dropdown-list"><a href="campaigns/student-reps.html" class="dropdown-link w-dropdown-link">Student Reps</a><a href="campaigns/vote16.html" class="dropdown-link w-dropdown-link">#Vote16BC</a></nav>
+              <nav class="dropdown-list w-dropdown-list"><a href="campaigns/student-reps.html" class="dropdown-link w-dropdown-link">Student Reps</a><a href="campaigns/vote16.html" class="dropdown-link w-dropdown-link">#Vote16BC</a><a href="campaigns/environment.html" class="dropdown-link w-dropdown-link">Environment</a><a href="campaigns/mental-health.html" class="dropdown-link w-dropdown-link">Mental Health</a></nav>
             </div><a href="donate.html" target="_blank" class="nav-link w-nav-link">Donate</a><a href="https://blog.bcyouthcouncil.ca" target="_blank" class="nav-link w-nav-link">Blog</a><a href="https://bcyouthcouncil.typeform.com/to/knkHje" target="_blank" class="nav-link w-nav-link">Contact Us</a></nav>
           <div class="menu-button w-nav-button">
             <div class="menu-icon w-icon-nav-menu"></div>
@@ -79,7 +79,7 @@
         <div class="person-position">Director of Information Technology</div>
         <div class="person-blurb">Aiden is the Director of Information Technology for BCYC. His passion has always been in technology since a young age. Aiden is currently enrolled in Grade 10 French Immersion at Carihi in Campbell River and he owns and operates his own tech support business. Aiden joined the BCYC to maintain and further their technology department.</div>
       </div>
-      <div id="w-node-025736557e54-92bc67ae" data-w-id="9ddc4710-2034-f085-be88-025736557e54" style="opacity:0" class="person-block"><img src="images/BD884FC5-F339-4F05-94F8-E5527A617C70-3891-00000154AD56C4C2.png" alt="Photo of Matthew Tran" width="195" srcset="images/BD884FC5-F339-4F05-94F8-E5527A617C70-3891-00000154AD56C4C2.png 500w, images/BD884FC5-F339-4F05-94F8-E5527A617C70-3891-00000154AD56C4C2.png 800w, images/BD884FC5-F339-4F05-94F8-E5527A617C70-3891-00000154AD56C4C2.png 1080w, images/BD884FC5-F339-4F05-94F8-E5527A617C70-3891-00000154AD56C4C2.png 1242w" sizes="195px" class="image-5">
+      <div id="w-node-025736557e54-92bc67ae" data-w-id="9ddc4710-2034-f085-be88-025736557e54" style="opacity:0" class="person-block"><img src="images/BD884FC5-F339-4F05-94F8-E5527A617C70-3891-00000154AD56C4C2.png" alt="Photo of Matthew Tran" width="195" srcset="images/BD884FC5-F339-4F05-94F8-E5527A617C70-3891-00000154AD56C4C2-p-500.png 500w, images/BD884FC5-F339-4F05-94F8-E5527A617C70-3891-00000154AD56C4C2-p-800.png 800w, images/BD884FC5-F339-4F05-94F8-E5527A617C70-3891-00000154AD56C4C2-p-1080.png 1080w, images/BD884FC5-F339-4F05-94F8-E5527A617C70-3891-00000154AD56C4C2.png 1242w" sizes="195px" class="image-5">
         <div class="person-name">Matthew Tran</div>
         <div class="person-position">Director of Communications </div>
         <div class="person-blurb">Matthew joined BCYC to help develop a place where youth can have a bigger voice in our province. As the Director of Communications, he focuses on our marketing and relations with other organizations. He lives in Surrey and is currently in Grade 11. He is enrolled in his high school&#x27;s leadership, music, volleyball and French immersion program. Matthew enjoys travelling, being a Big Brother mentor, and going to Canucks games.</div>
