--- a/press.html
+++ b/press.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Jun 12 2020 19:38:41 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Jun 12 2020 19:47:36 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ee3c3965baa430ac99dd1e1" data-wf-site="5e30eecf2c9656b33936eb65">
 <head>
   <meta charset="utf-8">
@@ -43,7 +43,7 @@
                 <div class="icon w-icon-dropdown-toggle"></div>
                 <div class="text-block">Our Campaigns</div>
               </div>
-              <nav class="dropdown-list w-dropdown-list"><a href="campaigns/student-reps.html" class="dropdown-link w-dropdown-link">Student Reps</a><a href="campaigns/vote16.html" class="dropdown-link w-dropdown-link">#Vote16BC</a></nav>
+              <nav class="dropdown-list w-dropdown-list"><a href="campaigns/student-reps.html" class="dropdown-link w-dropdown-link">Student Reps</a><a href="campaigns/vote16.html" class="dropdown-link w-dropdown-link">#Vote16BC</a><a href="campaigns/environment.html" class="dropdown-link w-dropdown-link">Environment</a><a href="campaigns/mental-health.html" class="dropdown-link w-dropdown-link">Mental Health</a></nav>
             </div><a href="donate.html" target="_blank" class="nav-link w-nav-link">Donate</a><a href="https://blog.bcyouthcouncil.ca" target="_blank" class="nav-link w-nav-link">Blog</a><a href="https://bcyouthcouncil.typeform.com/to/knkHje" target="_blank" class="nav-link w-nav-link">Contact Us</a></nav>
           <div class="menu-button w-nav-button">
             <div class="menu-icon w-icon-nav-menu"></div>
