--- a/campaigns/mental-health.html
+++ b/campaigns/mental-health.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sat Jun 13 2020 19:51:30 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Jun 16 2020 00:34:11 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ee3ca1192b8ebb4ba136124" data-wf-site="5e30eecf2c9656b33936eb65">
 <head>
   <meta charset="utf-8">
@@ -71,7 +71,7 @@ fbq('track', 'PageView');
   </div>
   <div class="campaign-people">
     <div class="w-layout-grid grid people-one">
-      <div id="w-node-ae0caa542ede-ba136124" data-w-id="ff622edc-2265-d0e2-2ce2-ae0caa542ede" style="opacity:0" class="person-block-region-one"><img src="../images/rsz_img_0014.jpg" alt="photo of Bodhi Mah" width="190" class="image-5">
+      <div id="w-node-ae0caa542ede-ba136124" data-w-id="ff622edc-2265-d0e2-2ce2-ae0caa542ede" style="opacity:0" class="person-block-region-one">
         <div class="person-name">Sanjana Karthik</div>
         <div class="person-position">Campaign Coordinator</div>
       </div>
